# tushare-a-share-fundamentals

./: AGENTS.md  README.md  config.example.yaml  pyproject.toml
configs/: audit.yaml  export.yaml  full.yaml  minimal.yaml  no_vip.yaml
docs/: README.md  configuration.md  datasets.md  development.md  export.md  state.md  usage.md
docs/api_references/tushare/: balancesheet.md  cashflow.md  disclosure_date.md  dividend.md  express.md  fina_audit.md  fina_indicator.md  fina_mainbz.md  forecast.md  income.md
openspec/changes/improve-config-and-data-storage/: design.md  proposal.md  tasks.md
project_tools/: check_api_availability.py  export_repo_source.py  verify_tushare_tokens.py
src/tushare_a_fundamentals/: cli.py  common.py  config.py  dataset_specs.py  downloader.py  downloader_helpers.py  duckdb_engine.py  income_export.py  legacy_income.py  periods.py  progress.py  retry.py  state_backend.py  storage.py  tushare_client.py
src/tushare_a_fundamentals/commands/: compact.py  coverage.py  download.py  export.py  query.py  state.py
src/tushare_a_fundamentals/meta/: doc_fields.py  state_store.py
tests/integration/: test_cli_overrides.py
tests/unit/: test_build_datasets.py  test_common_utils.py  test_compact_cmd.py  test_concat_non_empty.py  test_coverage.py  test_credits.py  test_dataset_fields.py  test_diff_single.py  test_download_cmd.py  test_download_multi_export.py  test_duckdb_engine.py  test_export_cmd.py  test_fetch_income_bulk.py  test_last_publishable_period.py  test_load_yaml.py  test_market_downloader.py  test_parquet_dependency.py  test_periods.py  test_periods_from_range.py  test_plan.py  test_pro_pool.py  test_public_contracts.py  test_rate_limiter.py  test_report_types.py  test_retry_policy.py  test_save_naming.py  test_state_cmd.py  test_state_store.py  test_write_parquet_dataset.py
tools/: update_dataset_fields.py
(+5 files in other folders)
