[project]
name = "tushare-a-share-fundamentals"
version = "0.2.0"
description = "A-share fundamentals downloader using TuShare"
readme = "README.md"
authors = [{ name = "Richard" }]
license = "MIT"
requires-python = ">=3.10,<3.13"
dependencies = [
  "tushare>=1.2.89",
  "pandas>=1.5.0",
  "pyyaml>=6.0",
  "numpy>=1.24.0",
  "python-dotenv>=1.0.0",
  "pyarrow>=14.0.0",
  "rich>=13.7.0",
]

[project.scripts]
funda = "tushare_a_fundamentals.cli:main"

[dependency-groups]
dev = [
  "pytest>=7.0.0",
  "ruff>=0.1.0",
  "pytest-cov>=4.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = [
  "tushare_a_fundamentals*",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "C90", "I"]
# Ignore rules that conflict with the formatter
ignore = ["E203"]

[tool.ruff.lint.per-file-ignores]
"project_tools/verify_tushare_tokens.py" = ["C901"]
"src/tushare_a_fundamentals/commands/coverage.py" = ["C901"]
"src/tushare_a_fundamentals/commands/download.py" = ["C901"]
"src/tushare_a_fundamentals/common.py" = ["C901"]
"src/tushare_a_fundamentals/downloader.py" = ["C901"]
"src/tushare_a_fundamentals/income_export.py" = ["C901"]
"src/tushare_a_fundamentals/meta/doc_fields.py" = ["E501"]
"src/tushare_a_fundamentals/tushare_client.py" = ["C901"]
"tests/**/*.py" = ["E501"]
"tools/update_dataset_fields.py" = ["C901"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.pytest.ini_options]
# Do not force the coverage plugin to avoid failures when pytest-cov is missing
addopts = []
markers = [
  "unit: unit tests",
  "integration: integration tests",
]
testpaths = ["tests"]
